--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
+body, input {
+  font-family: 'MuseoModerno';
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+
+.sidebar {
+  min-width: 400px;
+  border-right: 2px solid #F1F4F6;
+}
+
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: #222751;
+  padding: 16px 16px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+  font-size: 16px;
 }
